# pac-man-sdl

./: .gitignore  .pac_bible.txt.kate-swp  CMakeLists.txt  Makefile  README.md  dots  how-to-use-v0.1.txt  level  level02  linux_build.sh  linux_build_setup.sh  mingw_commands  pac_bible.txt  specs  win_build.sh
include/: UI.h  actor.h  animation.h  arrUtil.h  autoTileGeneration.h  commonEventHandling.h  comparisons.h  constants.h  entity.h  gamePlayingState.h  ghostStates.h  globalData.h  input.h  interpolation.h  jb_types.h  levelConfig.h  menu.h  menuState.h  movement.h  pickup.h  programState.h  render.h  renderProcessing.h  resources.h  sounds.h  sprite.h  states.h  targeting.h  tiles.h  userTypeDefinitions.h
res/: animated_sprites  animated_sprites.orig  dots  ghost_animated_sprites  ghosts  pac_starting_tile  player_animated_sprites  players  render_anims  texture_atlases  walls
res/img/: clock.kra  tileset-level-3.png~
res/levels/level1/: dots  ghostBegin  ghost_pen_tile  music_change  overrideIdxs_TM_Editor  pac_starting_tile  pickups  power_pellets  slow_tiles  tile_texture_map  tileset.png~  walls
res/levels/level10/: dots  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map  walls
res/levels/level2/: dots  ghostBegin  ghost_mode_times  ghost_pen_tile  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map  tilemap_editor_tileset_dimensions  walls
res/levels/level3/: dots  music_change  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map  tilemap_editor_tileset_dimensions  tilesetBitmasks  walls
res/levels/level4/: dots  ghost_mode_times  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map  tilemap_editor_tileset_dimensions  walls
res/levels/level5/: dots  ghost_mode_times copy  ghost_pen_tile  music_change  overrideIdxs_TM_Editor  pac_starting_tile  pickups  power_pellets  slow_tiles  tile_texture_map  walls
res/levels/level6/: dots  ghost_mode_times  overrideIdxs_TM_Editor  pac_starting_tile  pickups  power_pellets  slow_tiles  tile_texture_map  walls
res/levels/level7/: dots  ghost_pen_tile  music_change  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map  tilemap_editor_tileset_dimensions  tilesetBitmasks  walls
res/levels/level8/: dots  overrideIdxs_TM_Editor  pickups  power_pellets  slow_tiles  tile_texture_map
res/levels/level9/: dots  ghost_mode_times  music_change  overrideIdxs_TM_Editor  pickups  power_pellets  tile_texture_map  walls
res/sounds/music/: Trust-Relax-Autopilot_LICENSE
res/tmp/: ghost_mode_times  power_pellets  walls
src/: CMakeLists.txt  actor.c  actor.h  ai.h  animation.c  animation.h  comparisons.h  constants.h  editor_jumbo.c  entity.c  entity.h  flecs.c  gamePlayingState.c  jb_types.h  main.c  messaging.c  movement.c  pac_game.c  pac_game_jumbo.c  pacmonster.h  programStateProcessing.c  render.c  render.h  resources.c  states.c  states.h  targeting.c  targeting.h  tilemap_editor.c  tiles.c  tiles.h
